Correc the phone number

--- a/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
+++ b/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
@@ -21,7 +21,7 @@
                                 <a class="cus-a" (click)="goToBackPage()"><i class="fa fa-arrow-left"></i>&nbsp;back</a>
                             </div>
                             <div class="col-sm-11 p-0 text-right">
-                                <button type="button" class="btn btn-sm btn-primary mr-1" (click)="printCargo()"
+                                <button type="button" class="btn btn-sm btn-primary mr-1" (click)="printCargo(cargoDetails.shipmentNumber)"
                                         title="Print">
                                     <i class="fa fa-print"></i> Print
                                 </button>
