Cash balance check

--- a/src/app/main/layout/reports/cash-transfer/cash-transfer.component.html
+++ b/src/app/main/layout/reports/cash-transfer/cash-transfer.component.html
@@ -95,7 +95,7 @@
                                                href="#!/serviceform/{{cashTransfer.serviceFormId}}">{{cashTransfer.description}}</a>
                                             <span *ngIf="!cashTransfer.serviceFormId">{{cashTransfer.description || 'NA'}}</span>
                                         </td>
-                                        <td>{{cashTransfer.amount || 'NA'}}</td>
+                                        <td>{{cashTransfer.amount || 'NA'}} {{cashTransfer.balanceType}}</td>
                                         <td>{{cashTransfer.attrs.fromUser || 'NA'}}</td>
                                         <td><span *ngIf="!cashTransfer.status && userId !==  cashTransfer.fromUserId">
                                             <button type="button" class="btn btn-link" (click)="approveOrRejectCashTransfer(cashTransfer,'Approve')">Approve</button>
@@ -555,6 +555,28 @@
             </div>
             <div class="col-sm-10 col-12 form-group">
                 <div class="row">
+                    <label class="col-sm-3 col-form-label">Balance Type: </label>
+                    <div class="col-sm-4">
+                        <input class="form-check-input" type="radio" value="cargoBalance"
+                               id="cargoBalance" name="status" [(ngModel)]="cashTransfer.balanceType"
+                               [ngModelOptions]="{standalone: true}"
+                               style="margin-top: 0.2rem !important;" select> Cargo Balance
+                    </div>
+                    <div class="col-sm-4">
+                         <input class="form-check-input" type="radio" value="ticketDues"
+                               id="ticketDues" name="status" [(ngModel)]="cashTransfer.balanceType"
+                               [ngModelOptions]="{standalone: true}"
+                               style="margin-top: 0.2rem !important;"> Ticket Dues
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-9">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-10 col-12 form-group">
+                <div class="row">
                     <label class="col-sm-3 col-form-label">Amount: </label>
                     <div class="col-sm-9">
                         <input type="text" class="form-control form-control-sm" numbersOnly
@@ -594,7 +616,7 @@
         <div class="col-12 text-center">
             <p class="error-field">{{errorMessage}}</p>
         </div>
-        <button class="btn btn-success btn-sm mr-2" (click)="save(cashTransfer)">{{cashTransferId ? 'Update' : 'Save'}}</button>
+        <button class="btn btn-success btn-sm mr-2" (click)="saveCashTransfer(cashTransfer)">{{cashTransferId ? 'Update' : 'Save'}}</button>
         <button class="btn btn-danger btn-sm" (click)="cancel()">Cancel</button>
     </div>
 </ng-template>
