--- a/src/app/main/layout/reports/cashbalance/cashbalance.component.html
+++ b/src/app/main/layout/reports/cashbalance/cashbalance.component.html
@@ -43,6 +43,7 @@
                             <th>Contact</th>
                             <th [appFrentendSort]="cashBalanceArray" data-order="desc" data-name="amountToBePaid">Cash Balance <i class="fa fa-sort"></i></th>
                             <th [appFrentendSort]="cashBalanceArray" data-order="desc" data-name="cargoBalance">Cargo Balance <i class="fa fa-sort"></i></th>
+                            <th data-order="desc" data-name="totalBalance">Total Balance <i class="fa fa-sort"></i></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -53,6 +54,7 @@
                             <td>{{cash.contact}}</td>
                             <td>{{cash.amountToBePaid | number}}</td>
                             <td>{{cash.cargoBalance | number}}</td>
+                            <td>{{cash.cargoBalance+cash.amountToBePaid | number}}</td>
                         </tr>
                         <tr *ngIf="cashBalanceArray.length === 0 || !cashBalanceArray">
                             <td colspan="7" style="text-align: center">No Records exist.</td>
