--- a/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
+++ b/src/app/main/layout/cargo/view-cargo-booking/view-cargo-booking.component.html
@@ -226,15 +226,15 @@
             <table style="border: 2px solid #000; border-bottom: none !important;  font-family: arial, sans-serif; border-collapse: collapse;width: 800px;font-size: 10px;">
                 <tbody>
                 <tr>
-                    <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">LR
-                        Number:</label>&nbsp;
-                        <b>{{cargoDetails.shipmentNumber}}</b></td>
+<!--                    <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">LR-->
+<!--                        Number:</label>&nbsp;-->
+<!--                        <b>{{cargoDetails.shipmentNumber}}</b></td>-->
                     <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">From:</label>&nbsp;
                         <b>{{cargoDetails.attrs.fromBranchOfficeAddress}}</b></td>
                     <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">To:</label>&nbsp;
                         <b>{{cargoDetails.attrs.toBranchOfficeAddress}}</b>
                     </td>
-                    <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">Date:</label>&nbsp;
+                    <td colspan="2" style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">Date:</label>&nbsp;
                         <b>{{cargoDetails.dispatchDate | date}}</b></td>
                 </tr>
                 <tr>
@@ -342,9 +342,12 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 13px;color: red;">
-                        Receivers Copy
-                    </td>
+<!--                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 13px;color: red;">-->
+<!--                        Receivers Copy-->
+<!--                    </td>-->
+                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 16px;"><label class="control-label">LR
+                        Number:</label>&nbsp;
+                        <b style="font-size: 20px">{{cargoDetails.shipmentNumber}}</b></td>
                     <td style="border: 1px solid #000;padding-left: 5px;height: 50px;color: #ccc;text-align: center;"
                         colspan="2">Signature
                     </td>
@@ -417,7 +420,7 @@
                     <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">To:</label>&nbsp;
                         <b>{{cargoDetails.attrs.toBranchOfficeAddress}}</b>
                     </td>
-                    <td style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">Date:</label>&nbsp;
+                    <td colspan="2" style="border: 1px solid #ccc;padding-left: 5px;"><label class="control-label">Date:</label>&nbsp;
                         <b>{{cargoDetails.dispatchDate | date: "medium"}}</b></td>
                 </tr>
                 <tr>
@@ -525,9 +528,12 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 13px;color: red;">Sender
-                        Copy
-                    </td>
+<!--                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 13px;color: red;">Sender-->
+<!--                        Copy-->
+<!--                    </td>-->
+                    <td style="border: 1px solid #000;padding-left: 5px;height: 50px;font-size: 16px;"><label class="control-label">LR
+                        Number:</label>&nbsp;
+                        <b style="font-size: 20px">{{cargoDetails.shipmentNumber}}</b></td>
                     <td style="border: 1px solid #000;padding-left: 5px;height: 50px;color: #ccc;text-align: center;"
                         colspan="2">Signature
                     </td>
